# stableCOPS

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  candown.sh  canup.sh  leg_interface.md
.cache/clangd/index/: CanopenApplication.cpp.8290B02D9674EF46.idx  CanopenApplication.hpp.007EFB0F1F534FD2.idx  DriveController.cpp.EB94C4EFFC3DE835.idx  DriveController.hpp.5B69481687AC564C.idx  MotorConfig.hpp.121984DAF4ECBD4E.idx  MotorDriver.cpp.444DB3E97F980513.idx  MotorDriver.hpp.2603B2FA2632B184.idx  ObjectAccess.hpp.C1C6FB35A5605A74.idx  ObjectDictionary.hpp.252FC687EABEDC50.idx  State.cpp.5706A1D783B33236.idx  State.hpp.B69189F87DF8EAB5.idx  stablecops_master.cpp.4A6E048F4519438E.idx
cmake/toolchains/: aarch64-linux-gnu.cmake
config/: README.md  motor.example.env
config/motors/: README.md  euservo_rp.yml  eyou_phu.yml
dcf/: README.md  master.dcf
docs/: canopen_motor_pipeline.md  development.md
eds/: README.md
eds/EDS files/: EYOU_ServoModule（PHU）.eds  EYOU_ServoModule（RHU）.eds  EuServo_RP_EDS_（RP）V1.4.eds
examples/: csp_position.cpp  cst_torque.cpp  csv_velocity.cpp  enable_and_hold.cpp  example_cli.hpp  multi_drive.cpp  pdo_feedback_monitor.cpp  pp_move.cpp  pt_torque.cpp  pv_velocity.cpp
include/: README.md
include/stablecops/app/: Bus.hpp  CanopenApplication.hpp  MotorConfig.hpp  MotorDrive.hpp
include/stablecops/config/: PdoMap.hpp
include/stablecops/ds402/: Diagnostics.hpp  DriveController.hpp  ObjectAccess.hpp  ObjectDictionary.hpp  State.hpp
include/stablecops/lely/: LelyObjectAccess.hpp  MotorDriver.hpp
leg/examples/: ankle_pd_torque.cpp  capture_ecat_zero.cpp  capture_rom.cpp  dump_config.cpp  two_leg_demo.cpp  validate_mapper.cpp  validate_trajectory.cpp  zero_leg.cpp
leg/include/stablecops/leg/: AnkleLeg.hpp
leg/scripts/: analyze_latency.py  analyze_trajectory.py  plot_rom.py  plot_validation.py
leg/src/: AnkleLeg.cpp
leg/trajectories/: validation_trajectory_rotor_1000Hz_left_short_interp 2.csv
src/: README.md
src/app/: Bus.cpp  CanopenApplication.cpp  MotorDrive.cpp  README.md
src/config/: PdoMap.cpp
src/ds402/: Diagnostics.cpp  DriveController.cpp  State.cpp
src/lely/: MotorDriver.cpp  README.md
src/tools/: ToolCli.hpp  stablecops_commissiond.cpp  stablecops_master.cpp
tests/: stablecops_tests.cpp
tools/: generate_canopen_config.py
